tmp/vps-manifests/root__magistrala__base__00-namespace-secrets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: magistrala
